# opencvwrapper

./: .gitignore  CMakeLists.txt  Readme.md  build.gradle  build_ios_framework.sh  build_opencv.sh
Android/: settings.gradle
Android/app/: build.gradle
Android/app/src/main/res/layout/: activity_main.xml
Android/app/src/test/java/com/example/opencvwrapper/: ExampleUnitTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
Android/opencvwrapperlib/: build.gradle
Android/opencvwrapperlib/src/main/cpp/: CMakeLists.txt
Android/opencvwrapperlib/src/main/cpp/jni_lib/: CMakeLists.txt  jni_util.h
Android/opencvwrapperlib/src/main/java/com/dimabolsunov/opencvwrapperlib/: NativeLib.kt
Android/opencvwrapperlib/src/test/java/com/dimabolsunov/opencvwrapperlib/: ExampleUnitTest.kt
app/src/androidTest/java/com/example/opencvwrapper/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/opencvwrapper/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
opencv_build_scripts/: build_opencv_android_on_linux.sh  build_opencv_android_on_windows.sh  build_opencv_ios.sh
opencv_build_scripts/Android/: build_opencv_linux.sh
opencv_build_scripts/iOS/: build_opencv_ios.sh
opencvwrapperlib/: CMakeLists.txt  build.gradle  opencvwrapperlib.h
opencvwrapperlib/src/androidTest/java/com/dimabolsunov/opencvwrapperlib/: ExampleInstrumentedTest.kt
opencvwrapperlib/src/main/cpp/: CMakeLists.txt  opencvwrapperlib.cpp  opencvwrapperlib_jni.cpp
opencvwrapperlib/src/main/cpp/jni_lib/: CMakeLists.txt  opencvwrapperlib_jni.cpp
opencvwrapperlib/src/main/java/com/dimabolsunov/opencvwrapperlib/: NativeLib.kt
